package ar.net.mgardos.vsfridge.emu.web.spring;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class FridgeSpringWebEmulation {
	public static void main(final String[] args) {
		SpringApplication.run(FridgeSpringWebEmulation.class, args);
	}
}
