package ar.net.mgardos.vsfridge.emu.web.spring;


public class TouchPanelSpringWebController {
}
